Adjusted some styling. 1. Stopped list items from displaying bullet points. 2. Made checkboxes larger for better looks and function. 3. Added borders to buttons which invert when dark mode is turned on/off. 4. Increased some margins on buttons and checkbox- es to improve looks.

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,13 @@
 .read-the-docs {
   color: #888;
 }
+
+
+.todo-list-items {
+  list-style-type: none;
+}
+
+input[type=checkbox] {
+  width: 15px;
+  height: 15px;
+}
