--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,7 @@ button {
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
+  border: 2px solid #f9f9f9;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -64,5 +65,6 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+    border: 2px solid #1a1a1a;
   }
 }
